        Add full CGI URL to popups on map search results, so they can be
          used in addon scripts.
        Fix broken version link in ?action=about
        Make sure index pages don't offer page deletion links.
        Upgrade Leaflet version to 1.0.3.  (Note temporary addition of
          .leaflet-container to openguides-base.css - you may wish to include
          this in your own CSS.)

0.82    05 June 2016
        Add some extra CSS hooks to the templates.  Add new base stylesheet
          rules for a responsive version.  Make a few changes in core templates
          to facilitate the responsive version.  To get all these shiny new
          features, you need to set the "responsive" config variable to true.

0.81    10 January 2016
        Trim leading/trailing whitespace from the fax field (so those of us
          using this field to store the Twitter username don't get broken
          links).
        Stop escaping commas in URLs generated by internal links, category
          listings, locale listings, and Recent Changes (because these URLs
          look ugly and escaping isn't necessary).

0.80    07 June 2015
        Fix calling CGI:param in a list context #85

0.79    31 May 2015
        Add search_content_munger_module option to allow munging of node
        content before indexing for search (Plucene and Lucy only).

0.78    01 March 2015
        Add support for the OpenGraph Protocol #77
        Add IRC metadata #80
        Remove the @RSS macro #33

0.77    20 September 2014
        Fix tests to work with more upto date versions of SQLite 
        Thanks to @jmdh and Niko Tyni. See PR #78 for more info.

0.76    08 December 2013
        Add facility to create custom macros and override existing ones.

0.75    23 November 2013
        Add a Lucy backend for searching.  This is still experimental,
          so we recommend most people stick with Plucene for now.
        If you do change to Lucy, you will need to reindex your entire guide