@@ -12,6 +12,7 @@ More detailed changelogs can be found at
         Upgrade Leaflet version to 1.0.3.  (Note temporary addition of
           .leaflet-container to openguides-base.css - you may wish to include
           this in your own CSS.)
+        Make sure HTTPS website links are truncated in same way as HTTP.
 
 0.82    05 June 2016
         Add some extra CSS hooks to the templates.  Add new base stylesheet
